Added peak callers command line information